# mcp-rc-audit

./: .gitignore  CLAUDE.md  README.md  entry.py  install.sh  mcp-rc-audit.spec  pyproject.toml
.github/workflows/: ci.yml
core/: report.py
core/probe/: __init__.py
examples/: vulnerable_server.py
mcp_rc_audit/: cli.py  report.py
mcp_rc_audit/probe/: __init__.py  conformance.py
mcp_rc_audit/scanner/: __init__.py  code_scanner.py  patterns.py
tests/: test_cli.py  test_patterns.py  test_probe.py  test_report.py
