[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-rc-audit"
version = "0.1.0"
description = "Static scanner + live conformance probe for the MCP 2026-07-28 stateless migration"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Satvik" }]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mcp-rc-audit = "mcp_rc_audit.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_rc_audit*"]
