[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-rc-audit"
version = "0.1.1"
description = "Static scanner + live conformance probe for the MCP 2026-07-28 stateless migration"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "0xkaushal" }]
keywords = ["mcp", "audit", "migration", "model-context-protocol", "stateless", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/0xkaushal/mcp-rc-audit"
Issues = "https://github.com/0xkaushal/mcp-rc-audit/issues"

[project.scripts]
mcp-rc-audit = "mcp_rc_audit.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_rc_audit*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
